src/objects/Lead/fields/Primary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_Address__c</fullName>
    <formula>Contact__r.Primary_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Email Address</label>
    <type>Text</type>
</CustomField>