src/objects/Lead/fields/Primary_Work_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Work_Number__c</fullName>
    <inlineHelpText>ONLY one data point is required to be filled in, more is better</inlineHelpText>
    <label>Primary Work Number</label>
    <type>Phone</type>
</CustomField>