src/objects/Lead/fields/PRMDOD_Requested__c.field-meta.xml
<CustomField>
    <fullName>PRMDOD_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(22.4) PRM-(717)PRM field used to track Deal Origination Discount Requests from Partner. When this field is checked, a 3rd level approval is required in the Approval Process from the Bus Ops Approver</description>
    <inlineHelpText>Deal Origination Discount (DoD) applies only to Nokia’s Partner Released products as published on the Partner portal. DoD does not apply to Services nor Non Released products. For further product eligibility clarification- please contact your PSM.

DoD approval will require certain pre-sales activities have been completed and specific deal criteria (e.g. deal size, new business) are met. Consult Partner Program rules on the portal and/or your PSM if you have questions.</inlineHelpText>
    <label>Deal Origination Discount(DoD)Requested</label>
    <type>Checkbox</type>
</CustomField>