src/objects/Lead/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>also known as part number</inlineHelpText>
    <label>Product Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>