src/objects/Lead/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <length>80</length>
    <type>Text</type>
</CustomField>