src/objects/Lead/fields/Purchase_Intent__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Intent__c</fullName>
    <label>Purchase Intent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>