src/objects/Lead/fields/Reasons_for_Disqualification__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Disqualification__c</fullName>
    <description>Reasons for Disqualification field for ATR, BGA,D&amp;S and GTO</description>
    <label>Reason for Disqualification/Recycle</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>