src/objects/Lead/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia And Japan</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Greater China</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Middle East And Africa</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>CO Others</fullName>
                <isActive>false</isActive>
                <label>CO Others</label>
            </value>
            <value>
                <fullName>EUR GCBT Deutsche Telekom</fullName>
                <isActive>false</isActive>
                <label>EUR GCBT Deutsche Telekom</label>
            </value>
            <value>
                <fullName>EUR GCBT Orange</fullName>
                <isActive>false</isActive>
                <label>EUR GCBT Orange</label>
            </value>
            <value>
                <fullName>EUR GCBT Telefonica</fullName>
                <isActive>false</isActive>
                <label>EUR GCBT Telefonica</label>
            </value>
            <value>
                <fullName>EUR Market Unit West Europe</fullName>
                <isActive>false</isActive>
                <label>EUR Market Unit West Europe</label>
            </value>
            <value>
                <fullName>LAT Market Unit TEF HISPALAT (na)</fullName>
                <isActive>false</isActive>
                <label>LAT Market Unit TEF HISPALAT (na)</label>
            </value>
            <value>
                <fullName>Market Asia Pacific &amp; Japan</fullName>
                <isActive>false</isActive>
                <label>Market Asia Pacific &amp; Japan</label>
            </value>
            <value>
                <fullName>Region Asia Pacific</fullName>
                <isActive>false</isActive>
                <label>Region Asia Pacific</label>
            </value>
            <value>
                <fullName>Region West Europe</fullName>
                <isActive>false</isActive>
                <label>Region West Europe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>