src/objects/Lead/fields/Regional_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Sales_Manager__c</fullName>
    <label>Regional Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC RSM</fullName>
            </value>
            <value>
                <fullName>Ali Sadoudi</fullName>
            </value>
            <value>
                <fullName>Andy Gill</fullName>
            </value>
            <value>
                <fullName>Emil Pope</fullName>
            </value>
            <value>
                <fullName>Frank Muscolino</fullName>
            </value>
            <value>
                <fullName>Paul Ardizzoni</fullName>
            </value>
            <value>
                <fullName>Rishi Singh</fullName>
            </value>
            <value>
                <fullName>Freddie Zonoozi</fullName>
            </value>
            <value>
                <fullName>Roger Dykmann</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>