src/objects/Lead/fields/Rejection_Status_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Status_For_Approval__c</fullName>
    <label>Rejection Status For Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>