src/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aircraft Leasing</fullName>
            </value>
            <value>
                <fullName>Area Sales Manager</fullName>
            </value>
            <value>
                <fullName>Avionics</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Field Service Engineer</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Fleet Management</fullName>
            </value>
            <value>
                <fullName>Ground Operations</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Purchase/Procurement</fullName>
            </value>
            <value>
                <fullName>Sr. Management</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
            <value>
                <fullName>Tech Sales Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>