src/objects/Lead/fields/Safety__c.field-meta.xml
<CustomField>
    <fullName>Safety__c</fullName>
    <label>Safety</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAS 67A</fullName>
            </value>
            <value>
                <fullName>Intuview</fullName>
            </value>
            <value>
                <fullName>LSZ-860</fullName>
            </value>
            <value>
                <fullName>MK V, VII</fullName>
            </value>
            <value>
                <fullName>MK XXI_XXII</fullName>
            </value>
            <value>
                <fullName>P-864</fullName>
            </value>
            <value>
                <fullName>Smart Runway/Landing (RAAS/SAM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>