src/objects/Lead/fields/SAL_Age__c.field-meta.xml
<CustomField>
    <fullName>SAL_Age__c</fullName>
    <formula>CASE(Status, 
&apos;Sales Accepted Leads (SAL)&apos;, (Today() - SAL_Date__c), 
SQL_Date__c - SAL_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAL Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>