src/objects/Lead/fields/Sales_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Email__c</fullName>
    <description>The Manager of the Lead Owner&apos;s email address

Req #1312. Required for Marketo Sync</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Manager Email</label>
    <type>Email</type>
</CustomField>