src/objects/Lead/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aero Level</fullName>
            </value>
            <value>
                <fullName>ATR</fullName>
            </value>
            <value>
                <fullName>BGA</fullName>
            </value>
            <value>
                <fullName>D&amp;S</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Intracompany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>