src/objects/Lead/fields/Secondary_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Lead_Source__c</fullName>
    <label>Secondary Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>757 World Tour</fullName>
            </value>
            <value>
                <fullName>AAAA 2020</fullName>
            </value>
            <value>
                <fullName>ABACE</fullName>
            </value>
            <value>
                <fullName>AC Flight Ops &amp; MRO</fullName>
            </value>
            <value>
                <fullName>Advanced Technology</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>AEA</fullName>
            </value>
            <value>
                <fullName>AEA Europe</fullName>
            </value>
            <value>
                <fullName>AeroExpo UK</fullName>
            </value>
            <value>
                <fullName>Aero Friedrichshafen</fullName>
            </value>
            <value>
                <fullName>Aero India</fullName>
            </value>
            <value>
                <fullName>Aero India Show</fullName>
            </value>
            <value>
                <fullName>Aero South Africa</fullName>
            </value>
            <value>
                <fullName>aerospace.honeywell.com</fullName>
            </value>
            <value>
                <fullName>Aero Tech Week</fullName>
            </value>
            <value>
                <fullName>AFA Air &amp; Space</fullName>
            </value>
            <value>
                <fullName>Africa Aero &amp; Defense</fullName>
            </value>
            <value>
                <fullName>AF WEPTAC</fullName>
            </value>
            <value>
                <fullName>Airborne ISR Conference (UK)</fullName>
            </value>
            <value>
                <fullName>Airbus ACJ Conference – Oman</fullName>
            </value>
            <value>
                <fullName>Airbus BGA Conference 2020</fullName>
            </value>
            <value>
                <fullName>Air China JetWave Workshop</fullName>
            </value>
            <value>
                <fullName>Aircraft Commerce MRO - Amsterdam</fullName>
            </value>
            <value>
                <fullName>Aircraft Demo</fullName>
            </value>
            <value>
                <fullName>AirExpo Mexico</fullName>
            </value>
            <value>
                <fullName>Air Force Association Conference</fullName>
            </value>
            <value>
                <fullName>Air Lift Conference</fullName>
            </value>
            <value>
                <fullName>Airlift Tanker</fullName>
            </value>
            <value>
                <fullName>Air Power Central Europe</fullName>
            </value>
            <value>
                <fullName>Airshow China</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>