src/objects/Lead/fields/Send_Aircraft_Specific_Brochures__c.field-meta.xml
<CustomField>
    <fullName>Send_Aircraft_Specific_Brochures__c</fullName>
    <inlineHelpText>select this field incase wants to send aircraft specific brochure to customer</inlineHelpText>
    <label>Send Aircraft Specific Brochures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Challenger 600/601</fullName>
            </value>
            <value>
                <fullName>Challenger 604</fullName>
            </value>
            <value>
                <fullName>Citation X</fullName>
            </value>
            <value>
                <fullName>Dassault Falcon Phase II Upgrade</fullName>
            </value>
            <value>
                <fullName>Falcon 900B</fullName>
            </value>
            <value>
                <fullName>Falcon 900EX/C</fullName>
            </value>
            <value>
                <fullName>GII/III</fullName>
            </value>
            <value>
                <fullName>Global Express</fullName>
            </value>
            <value>
                <fullName>GulfstreamG550/500/450/350 Cert Foxtrot</fullName>
            </value>
            <value>
                <fullName>Gulfstream IV/IVSP</fullName>
            </value>
            <value>
                <fullName>Gulfstream IV/V DU-885 Cockpit Upgrade</fullName>
            </value>
            <value>
                <fullName>Gulfstream V</fullName>
            </value>
            <value>
                <fullName>Hawker 800/1000XP</fullName>
            </value>
            <value>
                <fullName>Primus EpicCDS/R for L382(ASB Avionics)</fullName>
            </value>
            <value>
                <fullName>Primus Epic EASy Options</fullName>
            </value>
            <value>
                <fullName>Primus Epic PlaneView Options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>