src/objects/Lead/fields/Service_Bulletins__c.field-meta.xml
<CustomField>
    <fullName>Service_Bulletins__c</fullName>
    <label>Service Bulletins</label>
    <length>225</length>
    <type>Text</type>
</CustomField>