src/objects/Lead/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer and Product Support Directory</fullName>
            </value>
            <value>
                <fullName>Flight Sentinel</fullName>
            </value>
            <value>
                <fullName>FSS &amp; Satcom Direct</fullName>
            </value>
            <value>
                <fullName>FSS for Bombardier</fullName>
            </value>
            <value>
                <fullName>FSS for Cessna</fullName>
            </value>
            <value>
                <fullName>FSS for Dassault</fullName>
            </value>
            <value>
                <fullName>FSS for Gulfstream</fullName>
            </value>
            <value>
                <fullName>FSS for Hawker Beechcraft</fullName>
            </value>
            <value>
                <fullName>FSS Overview Brochure</fullName>
            </value>
            <value>
                <fullName>HAPP</fullName>
            </value>
            <value>
                <fullName>International Trip Support</fullName>
            </value>
            <value>
                <fullName>MPP</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>Pre- Arranged Fuel Services</fullName>
            </value>
            <value>
                <fullName>WINN Graphical Weather</fullName>
            </value>
            <value>
                <fullName>Zing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>