src/objects/Lead/fields/SFCCLtngPtr__Competitive_Deal__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Competitive_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitive Deal</label>
    <type>Checkbox</type>
</CustomField>