src/objects/Lead/fields/Strategic_Segment__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Segment__c</fullName>
    <description>Req #1312. Required for Marketo Sync</description>
    <label>Strategic Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Networking Service</fullName>
            </value>
            <value>
                <fullName>Cable Attack Plan</fullName>
            </value>
            <value>
                <fullName>Converged Backbone Transform</fullName>
            </value>
            <value>
                <fullName>Customer Experience Transform</fullName>
            </value>
            <value>
                <fullName>Digital Media Store</fullName>
            </value>
            <value>
                <fullName>HLN Attack Plan</fullName>
            </value>
            <value>
                <fullName>Home Media Sharing</fullName>
            </value>
            <value>
                <fullName>IMS - Business Communications</fullName>
            </value>
            <value>
                <fullName>IMS - in LTE</fullName>
            </value>
            <value>
                <fullName>IMS - IP Voice Services</fullName>
            </value>
            <value>
                <fullName>IMS - Social Communication</fullName>
            </value>
            <value>
                <fullName>IMS - Video Communications</fullName>
            </value>
            <value>
                <fullName>IMS Operations Support</fullName>
            </value>
            <value>
                <fullName>IP Infra. Operations Support</fullName>
            </value>
            <value>
                <fullName>LTE - E2E LTE</fullName>
            </value>
            <value>
                <fullName>Mobile Backhaul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>