src/objects/Lead/fields/Thank_you_for_stopping_by_letter__c.field-meta.xml
<CustomField>
    <fullName>Thank_you_for_stopping_by_letter__c</fullName>
    <label>Thank you for stopping by letter</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Send Letter - Use General Signature</fullName>
                <default>true</default>
                <label>Send Letter - Use General Signature</label>
            </value>
            <value>
                <fullName>Send Letter - Use ASM Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>