src/objects/Lead/fields/thanksforstopbyemailSent__c.field-meta.xml
<CustomField>
    <fullName>thanksforstopbyemailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISthanksforstopbyemailSent</label>
    <type>Checkbox</type>
</CustomField>