src/objects/Lead/fields/Weather__c.field-meta.xml
<CustomField>
    <fullName>Weather__c</fullName>
    <label>Weather</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IntuVue RDR 4000</fullName>
            </value>
            <value>
                <fullName>LSZ-860</fullName>
            </value>
            <value>
                <fullName>P-880, 660, 440</fullName>
            </value>
            <value>
                <fullName>XM Epic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>