src/objects/Lead/recordTypes/ATR_Convert_Layout.recordType-meta.xml
<RecordType>
    <fullName>ATR_Convert_Layout</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>ATR Convert Layout</label>
</RecordType>