src/objects/Lead/recordTypes/ATR_Lead_Layout.recordType-meta.xml
<RecordType>
    <fullName>ATR_Lead_Layout</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>ATR Lead Layout</label>
</RecordType>