src/objects/Lead/recordTypes/ATR_RMU_Tool.recordType-meta.xml
<RecordType>
    <fullName>ATR_RMU_Tool</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>ATR RMU Tool</label>
</RecordType>