src/objects/Lead/recordTypes/Convert_Layout.recordType-meta.xml
<RecordType>
    <fullName>Convert_Layout</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Convert Layout</label>
</RecordType>