src/objects/Lead/recordTypes/Direct_Sales.recordType-meta.xml
<RecordType>
    <fullName>Direct_Sales</fullName>
    <active>true</active>
    <businessProcess>Direct Sales Process</businessProcess>
    <label>Direct Sales</label>
</RecordType>