src/objects/Lead/recordTypes/Distributor_Deal_Registration_Approved.recordType-meta.xml
<RecordType>
    <fullName>Distributor_Deal_Registration_Approved</fullName>
    <active>true</active>
    <businessProcess>SFCCLtngPtr__Deal Registration</businessProcess>
    <description>Distributor Deal Registration After Approval</description>
    <label>Distributor Deal Registration Approved</label>
</RecordType>