src/objects/Lead/recordTypes/Indirect_Deal_Registration_Approved.recordType-meta.xml
<RecordType>
    <fullName>Indirect_Deal_Registration_Approved</fullName>
    <active>true</active>
    <businessProcess>SFCCLtngPtr__Deal Registration</businessProcess>
    <description>Indirect Deal Registration After Approval</description>
    <label>Indirect Deal Registration Approved</label>
</RecordType>