src/objects/Lead/recordTypes/Lead_Convert_Layout.recordType-meta.xml
<RecordType>
    <fullName>Lead_Convert_Layout</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <description>Lead Convert</description>
    <label>Lead Convert Layout</label>
</RecordType>