src/objects/Lead/recordTypes/Lead_Converted_Layout.recordType-meta.xml
<RecordType>
    <fullName>Lead_Converted_Layout</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Lead Converted Layout</label>
</RecordType>