src/objects/Lead/recordTypes/Lead_Create_Layout.recordType-meta.xml
<RecordType>
    <fullName>Lead_Create_Layout</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <description>New Lead Creation Process</description>
    <label>Lead Create Layout</label>
</RecordType>