src/objects/Lead/recordTypes/PRM_Standard_Deal_registration.recordType-meta.xml
<RecordType>
    <fullName>PRM_Standard_Deal_registration</fullName>
    <active>true</active>
    <businessProcess>SFCCLtngPtr__Deal Registration</businessProcess>
    <label>Reseller Deal Registration</label>
</RecordType>