src/objects/Lead/recordTypes/PRMDistributor_Deal_Registration.recordType-meta.xml
<RecordType>
    <fullName>PRMDistributor_Deal_Registration</fullName>
    <active>true</active>
    <businessProcess>SFCCLtngPtr__Deal Registration</businessProcess>
    <label>Distributor Deal Registration</label>
</RecordType>