src/objects/Lead/recordTypes/PRMIndirect_Deal_Registration.recordType-meta.xml
<RecordType>
    <fullName>PRMIndirect_Deal_Registration</fullName>
    <active>true</active>
    <businessProcess>SFCCLtngPtr__Deal Registration</businessProcess>
    <label>Indirect Deal Registration</label>
</RecordType>