src/objects/Lead/recordTypes/Reseller_Deal_Registration_Approved.recordType-meta.xml
<RecordType>
    <fullName>Reseller_Deal_Registration_Approved</fullName>
    <active>true</active>
    <businessProcess>SFCCLtngPtr__Deal Registration</businessProcess>
    <description>Reseller Deal Registration After Approval</description>
    <label>Reseller Deal Registration Approved</label>
</RecordType>