src/objects/Lead/recordTypes/Services_Lead_Layout.recordType-meta.xml
<RecordType>
    <fullName>Services_Lead_Layout</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <description>Used for GTO and CSO</description>
    <label>Services Lead Layout</label>
</RecordType>