src/objects/Lead/recordTypes/SFCCLtngPtr__Deal_Registration.recordType-meta.xml
<RecordType>
    <fullName>SFCCLtngPtr__Deal_Registration</fullName>
    <active>true</active>
    <businessProcess>SFCCLtngPtr__Deal Registration</businessProcess>
    <label>Deal Registration</label>
</RecordType>