src/objects/Lead/recordTypes/SFCCLtngPtr__Sales.recordType-meta.xml
<RecordType>
    <fullName>SFCCLtngPtr__Sales</fullName>
    <active>true</active>
    <businessProcess>SFCCLtngPtr__Sales Lead</businessProcess>
    <label>Sales</label>
</RecordType>