src/objects/Lead/recordTypes/TXLE_Lead.recordType-meta.xml
<RecordType>
    <fullName>TXLE_Lead</fullName>
    <active>true</active>
    <businessProcess>TXLE Leads</businessProcess>
    <label>TXLE Lead</label>
</RecordType>