src/objects/Lead/validationRules/Actual_Revenue_Realized_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Revenue_Realized_Mandatory</fullName>
    <active>false</active>
    <description>When lead status is closed by FSE and owner role is FSE, Actual revenue realized   field should  become mandatory.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status,&apos;Closed By FSE&apos;), ( ISBLANK( Actual_Revenue_Realized__c ) ),  CONTAINS(  Owner__r.UserRole.Name  , &apos;FSE&apos;) ) &amp;&amp; $Profile.Name !=&apos;Portal API User - RFQ&apos;</errorConditionFormula>
    <errorDisplayField>Actual_Revenue_Realized__c</errorDisplayField>
    <errorMessage>Please Enter  Actual Revenue</errorMessage>
</ValidationRule>