src/objects/Lead/validationRules/Address_field_for_new_End_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_field_for_new_End_Customer</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;Data Loader Profile&apos;, RecordType.Name &lt;&gt; &apos;Direct Sales&apos;, 
OR( 
AND( 
(ISPICKVAL( Customer_Type__c, &apos;New customer&apos;)), 
OR( 
ISBLANK( Street ), 
ISBLANK( City ), 
ISBLANK( PostalCode ), 
ISBLANK( Country ))) 
, 
AND( 
(ISPICKVAL( Customer_Type__c, &apos;Existing customer in new country&apos;)), 
OR( 
ISBLANK( Street ), 
ISBLANK( City ), 
ISBLANK( PostalCode ), 
ISBLANK( Country ))) 
) 
)</errorConditionFormula>
    <errorMessage>Please Enter The End Customer Address Details.</errorMessage>
</ValidationRule>