src/objects/Lead/validationRules/Address_Information_Convert.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Information_Convert</fullName>
    <active>true</active>
    <description>Address information is required if account or contact is not available.</description>
    <errorConditionFormula>and(
or(
Account__c =&apos;&apos;,
Contact__c=&apos;&apos;
), 
or(
$Profile.Name != &apos;Portal API User RO Automation&apos;,
not CONTAINS( $Profile.Name, &apos;Admin&apos; )
),
RecordType.DeveloperName = &apos;Lead Convert Layout&apos;,
or(
Primary_Work_Number__c = &apos;&apos;,
Account_Phone__c = &apos;&apos;,
Account_Address_line_1__c = &apos;&apos;,
Account_City__c = &apos;&apos;,
ISPICKVAL( Account_Country__c ,&apos;&apos;)
)
)</errorConditionFormula>
    <errorMessage>Please enter values for &apos;Account Phone Number&apos;, &apos;Account Address line 1&apos; , &apos;City Name&apos;, &apos;Primary Work Number&apos; and &apos;Country Name&apos; in &quot;New Account or Contact Information&quot; section.</errorMessage>
</ValidationRule>