src/objects/Lead/validationRules/Aircraft_Type_and_Tail_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Aircraft_Type_and_Tail_Number_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( RecordTypeId=$Label.BGA_Honeywell_Prospect ,(Aircraft_Type__c =null || ISBLANK(Aircraft_Tail_Number__c  )),   ISPICKVAL(LeadSource , &apos;ILOW Case&apos; )  )</errorConditionFormula>
    <errorMessage>Aircraft Type and Aircraft Tail number are required</errorMessage>
</ValidationRule>