src/objects/Lead/validationRules/BGA_Account_information.validationRule-meta.xml
<ValidationRule>
    <fullName>BGA_Account_information</fullName>
    <active>true</active>
    <description>This is to make sure that “New Account or Contact Information” section has enough information to be sent to Master Data team to create new Account.</description>
    <errorConditionFormula>$RecordType.Id =$Label.BGA_Honeywell_Prospect  &amp;&amp; Account__c = NULL &amp;&amp;  ISPICKVAL(Status, &apos;Sales Qualified Lead&apos;) &amp;&amp; IF( ( Account_Phone__c = &apos;&apos; || Account_Address_line_1__c = &apos;&apos; || Account_City__c = &apos;&apos; || ISPICKVAL( Account_Country__c ,&apos;&apos;) ), true,false)</errorConditionFormula>
    <errorMessage>Please enter values for &apos;Account Phone Number&apos;, &apos;Account Address line 1&apos; , &apos;City Name&apos; and &apos;Country Name&apos; in &quot;New Account or Contact Information&quot; section.</errorMessage>
</ValidationRule>