src/objects/Lead/validationRules/BGA_Contact_info_needed_on_Qualification.validationRule-meta.xml
<ValidationRule>
    <fullName>BGA_Contact_info_needed_on_Qualification</fullName>
    <active>true</active>
    <description>BGA contact information is required when Lead is qualified</description>
    <errorConditionFormula>IF(( Contact__c =&apos;&apos; ) &amp;&amp; (RecordTypeId =$Label.BGA_Honeywell_Prospect) &amp;&amp;(ISPICKVAL(Status, &apos;Sales Qualified Lead&apos;)) &amp;&amp;(OR(( Email =&apos;&apos; &amp;&amp; Primary_Fax_Number__c =&apos;&apos; &amp;&amp; Primary_Work_Number__c =&apos;&apos;),FirstName = &apos;&apos;)), true,false)</errorConditionFormula>
    <errorMessage>Please enter any one of the following items: Primary Email or Primary Work Number or Primary Fax Number in &quot;New Account or Contact Information&quot;  section for the Contact and FirstName.</errorMessage>
</ValidationRule>